# wildfire-prediction-app12

./: .python-version  README_DEPLOYMENT.md  index.html  index.py  index_simple.py  pyproject.toml  requirements-vercel.txt  requirements.txt  streamlit_app.py  train_model.py
api/: index.py
