[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wildfire-prediction"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.33.0",
    "scikit-learn==1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "joblib>=1.4.0",
    "imbalanced-learn>=0.12.0"
]
